--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+    --blue-2: #4C52AD;
+    --grey-1: #EDEDED;
+
+}
